--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "src": "^1.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
